# tomat

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
docs/: PRD.md  SCREENS.md
src/: app.rs  logger.rs  main.rs  timer.rs  ui.rs
src/data/: mod.rs  timer.rs
src/ui/: controls.rs  header.rs  mod.rs  modal.rs  stats.rs  timer.rs
src/ui/screens/: clock.rs  fullscreen.rs  help.rs  mod.rs  normal.rs
